Bug #48476: No right aligned comments

--- a/services/univention-admin-diary/umc/js/admindiary.styl
+++ b/services/univention-admin-diary/umc/js/admindiary.styl
@@ -55,7 +55,6 @@ article.admindiary
 		background-image: url("admindiary/icons/default.svg")
 	blockquote.comment
 		background-image: url("admindiary/icons/comment.svg")
-		text-align: right
 	address
 		text-align: right
 		font-size: italic
